tests/mm0_mmu/fail/bad-whitespace3.mmu
--      v-- this is a FORM FEED
(sort s)
